# than_media

./: .gitignore  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/than_media/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: than_media.dart  than_media_bindings_generated.dart
lib/core/audio_device/: audio_device.dart  audio_device_state.dart  audio_device_state_handler.dart
lib/core/converter/: video_to_audio_converter.dart
native_src/: CMakeLists.txt
native_src/src/: audio_decoder.cpp  audio_decoder.hpp  audio_device.cpp  audio_device.hpp  audio_file_saver.cpp  audio_file_saver.hpp  ffi_wrapper.cpp  ffi_wrapper.h  main.cpp  video_reader.cpp  video_reader.hpp
native_src/src/audio/: audio_device.cpp  audio_player.cpp
native_src/src/core/: media_file.cpp  media_file.hpp  video_audio_converter.cpp  video_audio_converter.hpp
native_src/src/ffi/: ffi_audio_wrapper.cpp  ffi_file_saver.cpp  ffi_wrapper.cpp  ffi_wrapper.h
src/: CMakeLists.txt  build_all.sh  imple.cpp  main.cpp
src/audio/: audio_device.cpp  audio_device.hpp  audio_file_saver.cpp  audio_file_saver.hpp  audio_player.cpp  audio_player.hpp
src/core/: media_file.cpp  media_file.hpp
src/ffi/: ffi_audio_wrapper.cpp  ffi_file_saver.cpp  ffi_wrapper.h  media_file_wrapper.cpp
src/video/: video_reader.cpp  video_reader.hpp
test/: main.dart  than_media_test.dart
